--- a/css/style.css
+++ b/css/style.css
@@ -275,3 +275,9 @@ figure.effect-layla:hover img {
 	-webkit-transition-delay: 0.15s;
 	transition-delay: 0.15s;
 }
+
+.modal { 
+	width: 75% !important ; 
+	height: 100% !important ; 
+}
+
